conf/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: endpoint-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /(.*)
        backend:
          serviceName: cloud-phoenix-kata-node
          servicePort: 80
      - path: /(crash|generatecert)
        backend:
          serviceName: dummy
          servicePort: 80
